--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,15 @@
-// @import './assets/_reset.scss';
+@import './assets/scss/reset';
 
-body {
-  height: 100vh;
-  width: 100vw;
+.container {
+  margin: 0 auto;
+  max-width: 1024px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.weather {
+  width: 100%;
+  height: 500px;
   background-color: red;
 }
