--- a/src/App.scss
+++ b/src/App.scss
@@ -2,7 +2,7 @@
 
 .container {
   margin: 0 auto;
-  max-width: 1024px;
+  max-width: 1200px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,4 +12,5 @@
   width: 100%;
   height: 500px;
   background-color: red;
+  display: flex;
 }
