refactor change incoming value to more reading

--- a/src/App.scss
+++ b/src/App.scss
@@ -14,3 +14,10 @@
   background-color: red;
   display: flex;
 }
+.current-weather {
+  border: 1px solid black;
+  height: 100%;
+  width: 30%;
+  background-color: white;
+  padding: 1rem;
+}
