--- a/src/App.scss
+++ b/src/App.scss
@@ -21,3 +21,11 @@
   background-color: white;
   padding: 1rem;
 }
+.forecast-weather {
+  border: 1px solid black;
+  height: 100%;
+  width: 70%;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+}
