--- a/src/components/Weather/Weather.scss
+++ b/src/components/Weather/Weather.scss
@@ -1,9 +1,3 @@
-.future-weather {
-  border: 1px solid black;
-  height: 100%;
-  width: 70%;
-  background-color: white;
-}
 .weather-temperature-icon {
   display: flex;
   justify-content: space-between;
@@ -13,14 +7,32 @@
     font-family: sans-serif;
   }
 }
+
 .weather-description {
   margin-bottom: 1rem;
 }
+
 .weather-info {
   li {
     display: flex;
     justify-content: space-between;
     margin-bottom: 0.6rem;
     border-bottom: 1px solid black;
+    padding-bottom: 0.4rem;
   }
+}
+.forecast-calendar {
+  height: 50%;
+  ul {
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    li {
+      flex-grow: 1;
+      max-width: 200px;
+    }
+  }
+}
+.forecast-hourly {
+  height: 50%;
 }
