--- a/src/components/Weather/Weather.scss
+++ b/src/components/Weather/Weather.scss
@@ -29,10 +29,19 @@
     justify-content: space-between;
     li {
       flex-grow: 1;
-      max-width: 200px;
+      max-width: 8rem;
     }
   }
 }
 .forecast-hourly {
   height: 50%;
+  ul {
+    height: 100%;
+    display: flex;
+    gap: 1rem;
+    justify-content: space-between;
+  }
+}
+.active-day {
+  background-color: cadetblue;
 }
