--- a/src/components/Weather/Weather.scss
+++ b/src/components/Weather/Weather.scss
@@ -35,6 +35,7 @@
 }
 .forecast-hourly {
   height: 50%;
+  background-color: antiquewhite;
   ul {
     height: 100%;
     display: flex;
@@ -43,5 +44,5 @@
   }
 }
 .active-day {
-  background-color: cadetblue;
+  background-color: antiquewhite;
 }
