--- a/src/App.scss
+++ b/src/App.scss
@@ -1,7 +1,15 @@
 @import './assets/scss/reset';
 
+.background {
+  display: flex;
+  justify-content: center;
+}
 .container {
-  margin: 0 auto;
+  box-shadow: 0px 5px 60px 2px #a5a8ab;
+  background: #1367be;
+  font-family: sans-serif;
+  color: #fff;
+  margin: 0.5rem;
   max-width: 1200px;
   display: flex;
   justify-content: center;
@@ -10,23 +18,19 @@
 }
 .weather {
   width: 100%;
-  background-color: red;
+
   display: flex;
 }
 .current-weather {
-  border: 1px solid black;
   width: 30%;
-  background-color: white;
   padding: 1rem;
 }
 .forecast-weather {
-  border: 1px solid black;
   width: 70%;
-  background-color: white;
   display: flex;
   flex-direction: column;
 }
-@media (max-width: 1001px) {
+@media (max-width: 955px) {
   .weather {
     flex-direction: column;
   }
@@ -37,7 +41,7 @@
     width: auto;
   }
 }
-@media (max-width: 700px) {
+@media (max-width: 600px) {
   .forecast-weather {
     flex-direction: row;
   }
