--- a/src/components/Weather/Weather.scss
+++ b/src/components/Weather/Weather.scss
@@ -38,11 +38,12 @@
     display: flex;
     justify-content: space-between;
     margin-bottom: 0.6rem;
-    border-bottom: 1px solid black;
+    border-bottom: 0.1rem solid #084685;
     padding-bottom: 0.4rem;
   }
 }
 .forecast-calendar {
+  background: #1e569b;
   height: 50%;
   ul {
     height: 100%;
@@ -50,35 +51,65 @@
     justify-content: space-between;
     li {
       flex-grow: 1;
-      max-width: 8rem;
+      padding: 0.5rem;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: center;
+      border-right: 0.2rem solid #1367be;
+      border-bottom: 0.1rem solid #1367be;
+      &:last-child {
+        border-right: none;
+      }
+    }
+    .active-day {
+      border-bottom: none;
     }
   }
 }
+.forecast-icon {
+  max-width: 4rem;
+}
+.forecast-description {
+  display: inline-block;
+  max-width: min-content;
+  text-align: center;
+}
 .forecast-hourly {
+  font-size: 0.8rem;
+  padding: 1rem;
   height: 50%;
-  background-color: antiquewhite;
+  background-color: #084685;
+  p {
+    margin-bottom: 0.1rem;
+  }
   ul {
     height: 100%;
     display: grid;
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: 1fr;
     justify-content: space-between;
+    grid-gap: 1rem;
+  }
+  li {
+    text-align: center;
   }
 }
 .active-day {
-  background-color: antiquewhite;
+  background-color: #084685;
 }
 
-@media (max-width: 1001px) {
+@media (max-width: 955px) {
   .weather-info {
     display: grid;
     grid-template-columns: 1fr 1fr;
     column-gap: 1rem;
   }
 }
-@media (max-width: 700px) {
+@media (max-width: 600px) {
   .forecast-calendar {
-    width: 40%;
+    height: auto;
+    width: 50%;
     ul {
       flex-direction: column;
       li {
@@ -88,10 +119,17 @@
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(4, 1fr);
         grid-template-areas:
-          'forecast-day  forecast-max'
-          'forecast-day-name forecast-min'
-          'forecast-icon forecast-main'
+          'forecast-day  forecast-temp'
+          'forecast-day-name forecast-main'
+          'forecast-icon forecast-description'
           'forecast-icon forecast-description';
+        // gap: 1rem;
+        border-right: 0.1rem solid #1367be;
+        border-bottom: 0.2rem solid #1367be;
+      }
+      .active-day {
+        border-right: none;
+        border-bottom: 0.2rem solid #1367be;
       }
     }
   }
@@ -101,11 +139,8 @@
   .forecast-icon {
     grid-area: forecast-icon;
   }
-  .forecast-max {
-    grid-area: forecast-max;
-  }
-  .forecast-min {
-    grid-area: forecast-min;
+  .forecast-temp {
+    grid-area: forecast-temp;
   }
   .forecast-day-name {
     grid-area: forecast-day-name;
@@ -118,7 +153,8 @@
   }
 
   .forecast-hourly {
-    width: 60%;
+    height: auto;
+    width: 50%;
     ul {
       grid-template-rows: repeat(8, 1fr);
       grid-template-columns: 1fr;
