--- a/src/App.scss
+++ b/src/App.scss
@@ -17,20 +17,36 @@
   align-items: center;
   flex-direction: column;
 }
+
 .weather {
   width: 100%;
 
   display: flex;
 }
+
 .current-weather {
-  width: 30%;
+  width: 33%;
   padding: 1rem;
 }
+
+.weather-info-label {
+  color: #e6e6e6;
+}
+.weather-description {
+  font-weight: bolder;
+}
+
+.weather-info-value {
+  text-shadow: 2px 2px 15px var.$color-1;
+  font-weight: bolder;
+}
+
 .forecast-weather {
-  width: 70%;
+  width: 67%;
   display: flex;
   flex-direction: column;
 }
+
 @media (max-width: 955px) {
   .weather {
     flex-direction: column;
@@ -42,6 +58,7 @@
     width: auto;
   }
 }
+
 @media (max-width: 600px) {
   .forecast-weather {
     flex-direction: row;
