fixed getWeakenedDay undefine return

--- a/src/components/Weather/Weather.scss
+++ b/src/components/Weather/Weather.scss
@@ -51,6 +51,7 @@
 .forecast-calendar {
   background: var.$color-4;
   flex-grow: 1;
+  cursor: pointer;
   ul {
     height: 100%;
     display: flex;
