--- a/src/App.scss
+++ b/src/App.scss
@@ -6,14 +6,15 @@
   justify-content: center;
 }
 .container {
+  min-height: 35rem;
   box-shadow: 2px 5px 20px 2px #a5a8ab;
   background: var.$color-3;
   font-family: sans-serif;
   color: #fff;
   margin: 0.5rem;
-  max-width: 1200px;
+  width: 1200px;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: column;
 }
@@ -46,6 +47,12 @@
   width: 67%;
   display: flex;
   flex-direction: column;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    width: 100%;
+  }
 }
 
 @media (max-width: 955px) {
