--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -3,32 +3,58 @@
 .about-background {
   display: flex;
   justify-content: center;
+  font-family: sans-serif;
+  color: #fff;
 }
 
 .about-container {
   max-width: 1200px;
+  background: var.$color-3;
+  padding: 2rem;
 }
 
 .about {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-areas:
-    'about1 about1 about-img1'
-    'about-img2 about2 about2';
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.about-inf {
+  display: flex;
+  font-size: 1.5rem;
+  gap: 2rem;
+  margin-bottom: 1rem;
+  a {
+    &:hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
+}
+
+.about-common {
+  display: flex;
+  background: var.$color-2;
+  padding: 1rem;
+  gap: 1rem;
+  img {
+    width: 33%;
+  }
 }
 
 .about1 {
-  grid-area: about1;
-}
-
-.about-img1 {
-  grid-area: about-img1;
+  align-items: flex-end;
 }
 
 .about2 {
-  grid-area: about2;
+  flex-direction: row-reverse;
 }
 
-.about-img2 {
-  grid-area: about-img2;
+@media (max-width: 600px) {
+  .about-common {
+    flex-direction: column;
+    img {
+      width: 100%;
+    }
+  }
 }
