--- a/src/components/Menu/Menu.scss
+++ b/src/components/Menu/Menu.scss
@@ -5,4 +5,10 @@
   gap: 1rem;
   align-items: center;
   font-size: 1.5rem;
+  a {
+    &:hover {
+      text-decoration: underline;
+      cursor: pointer;
+    }
+  }
 }
