--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -13,12 +13,6 @@
   padding: 2rem;
 }
 
-.about {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-}
-
 .about-inf {
   display: flex;
   font-size: 1.5rem;
@@ -32,22 +26,17 @@
   }
 }
 
-.about-common {
-  display: flex;
-  background: var.$color-2;
+ol {
+  font-size: 1.2rem;
+  list-style: decimal;
+  list-style-position: inside;
+}
+ul {
   padding: 1rem;
-  gap: 1rem;
-  img {
-    width: 33%;
+  list-style-position: inside;
+  li {
+    margin-bottom: 0.4rem;
   }
-}
-
-.about1 {
-  align-items: flex-end;
-}
-
-.about2 {
-  flex-direction: row-reverse;
 }
 
 @media (max-width: 600px) {
